# bignote-gpt

./: .gitignore  LICENSE  README.md  pyproject.toml
bignote_gpt/: __main__.py  checkpoint.py  corpus.py  dataset.py  defaults.py  describe.py  factory.py  generate.py  generator.py  interact.py  model.py  optimizer.py  seeding.py  tokenizer.py  train.py  trainer.py  training_reporter.py
bignote_gpt/factories/: __init__.py  model_factory.py  optimizer_factory.py  tokenizer_factory.py
bignote_gpt/models/classic/: feed_forward.py  gpt.py  masked_self_attention.py  transformer.py  transformer_block.py
bignote_gpt/optimizers/: adamw_optimizer.py
bignote_gpt/reporters/: composite_training_reporter.py  console_training_reporter.py  tensorboard_training_reporter.py
bignote_gpt/tokenizers/: byte_level_tokenizer.py
